--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@600&family=Rowdies:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@600&family=Rowdies:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
 
 * {
   margin: 0;
@@ -10,11 +10,11 @@
 }
 
 :root {
-  --roboto-sans-serif: "Roboto", sans-serif;
-  --open-sans-serif: "Open Sans", sans-serif;
-  --akaya-telivigala: "Akaya Telivigala", cursive;
-  --lato-sans-serif: "Lato", sans-serif;
-  --inconsolata-monospace: "Inconsolata", monospace;
+  --roboto-sans-serif: 'Roboto', sans-serif;
+  --open-sans-serif: 'Open Sans', sans-serif;
+  --akaya-telivigala: 'Akaya Telivigala', cursive;
+  --lato-sans-serif: 'Lato', sans-serif;
+  --inconsolata-monospace: 'Inconsolata', monospace;
   --blue-color: blue;
   --red-color: red;
   --white-color: white;
@@ -203,7 +203,7 @@
 }
 
 .order-card::before {
-  content: "";
+  content: '';
   width: 140px;
   height: 40px;
   position: absolute;
@@ -227,7 +227,7 @@
 }
 
 .order-card::after {
-  content: "";
+  content: '';
   width: 140px;
   height: 40px;
   position: absolute;
@@ -511,13 +511,13 @@
 
 .about-page-container {
   font-family: var(--lato-sans-serif);
-  height: 30em;
+  /* height: 30em; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   padding: 60px;
-  background-image: url("../images/about-us-banner.jpg");
+  background-image: url('../images/about-us-banner.jpg');
 }
 
 .about-page-section {
@@ -539,7 +539,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-image: url("../images/about-us-banner.jpg");
+  background-image: url('../images/about-us-banner.jpg');
 }
 
 .menu-section {
@@ -627,4 +627,28 @@
   background-color: var(--white-color);
   color: black;
   border: 1px solid var(--blue-color);
+}
+
+.our-chefs-container {
+  padding: 0px 5em;
+}
+
+.our-chefs-section {
+  margin: 5em 0;
+}
+
+.our-chefs-section h3 {
+  padding: 10px;
+  background-color: red;
+  font-weight: bold;
+  color: white;
+}
+
+.chefs-img-section {
+  display: flex;
+}
+
+.chef-img {
+  width: 310px;
+  height: 20em;
 }
